Added description meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>Kalkulator kredytowy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="kalkulator kredytowy, symulator kredytowy, sumulator kredytu, symulator rat, kalkulator rat, symulacje kredytowe, kalkulator kredytu hipotecznego, obliczanie raty kredytu, badanie kredytu">
+  <meta name="description" content="Symulator kredytowy pozwalający na łatwą i płynną symulację kredytu za pomocą wygodnych suwaków. Symulator umożliwia poznanie całkowitego kosztu kredytu oraz jego wrażliwość na zmiany stóp procentowych.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
